--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
             position: absolute;
             width: 100%;
             height: 100%;
-            background: url('your-background-image.jpg') no-repeat center center fixed; /* Keep original background image */
+            background: url('background.jpg') no-repeat center center fixed; /* Keep original background image */
             background-size: cover;
             z-index: 0; /* Ensure particles are behind other elements */
         }
         .particle {
             position: absolute;
             border-radius: 50%;
-            background: rgba(255, 255, 255, 0.2);
+            background: rgba(255, 255, 255, 0.4);
             filter: blur(8px);
             animation: float 10s infinite;
         }
